# cpp-life

./: CMakeLists.txt  README.md
patterns/: acorn.txt  glider.txt  glider_gun.txt
src/: CMakeLists.txt  board.cpp  board.h  main.cpp  nuklear.cpp
test/: CMakeLists.txt  test_board.cpp
